이미지를 추가함

--- a/_posts/2024-07-15-f.md
+++ b/_posts/2024-07-15-f.md
@@ -3,4 +3,4 @@ layout:  single
 title: "첫번때입니다"
 ----
 # 오늘 처음ㅇ,ㅡ로 블로그
-열심히!!
+열심히!!![logo](C:\SW\ygin06-github-blog\ygin06.github.io\images\2024-07-15-f\logo.png)
